--- a/RobotsExplorer.Model/RobotsExplorer.Model.csproj
+++ b/RobotsExplorer.Model/RobotsExplorer.Model.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain.cs" />
     <Compile Include="Proxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
