--- a/RobotsExplorer.Test/RobotsExplorer.Test.csproj
+++ b/RobotsExplorer.Test/RobotsExplorer.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ProxyHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexTest.cs" />
+    <Compile Include="UtilTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RobotsExplorer.Model\RobotsExplorer.Model.csproj">
